# interview-env

./: README.md  pyproject.toml
interview/: script.py
