[tool.poetry]
name = "interview"
version = "0.1.0"
description = ""
authors = ["Ashia Lewis <pantagruelspendulum@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts] 
script = "interview.script:main"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
